correction text-align

--- a/src/sass/_profil.scss
+++ b/src/sass/_profil.scss
@@ -38,6 +38,7 @@
 		}
 
 		.profil_box__text{
+		    text-align: left;
 			display: flex;
 			flex-direction: column;
 			align-self: flex-start;
