--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -30,8 +30,3 @@ a{
 li{
 	list-style: none;
 }
-
-.page{
-	background-color: $pageBackgroundColor;
-	overflow : hidden;
-}
